mistral-24b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mistral-24b-gptq-service
  namespace: default
spec:
  selector:
    app: mistral-24b-gptq
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080  # You can change this to any available port (30000-32767)
  type: NodePort
